# Podaruj-mi

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  RENDER_SUPABASE.md  alembic.ini  app.db  docker-compose.yml  pyproject.toml  render.yaml  test_podaruj.db
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_add_family_id_to_occasions.py  0002_add_summary_sent_to_occasions.py
app/: config.py  database.py  main.py
app/models/: __init__.py  family.py  friendship.py  item.py  occasion.py  pending_invitation.py  pledge.py  user.py
app/routers/: auth.py  families.py  friends.py  occasions.py  pages.py  users.py
app/schemas/: auth.py  item.py  occasion.py  social.py  user.py
app/services/: auth_service.py  email_service.py  occasion_service.py  scheduler.py  social_service.py  storage_service.py
app/templates/: base.html  index.html
app/templates/auth/: activated.html  forgot_password.html  forgot_password_sent.html  login.html  register.html  registered.html  reset_password.html  reset_password_done.html
app/templates/legal/: privacy.html  terms.html
app/templates/occasions/: create.html  detail.html  edit.html  list.html
app/templates/partials/: invite_confirm.html  item_card.html  item_edit_form.html  recipient_results.html
app/templates/profile/: edit.html  index.html
app/utils/: cookie_auth.py  csrf.py  deps.py  observability.py  security.py  tokens.py
frontend/static/: manifest.json  sw.js
tests/: conftest.py  test_auth.py  test_occasions.py  test_pledges.py
(+3 files in other folders)
