[tool.poetry]
name = "podaruj-mi"
version = "0.1.0"
description = "Platforma do koordynacji prezentow w gronie znajomych i rodziny"
authors = ["Adam Matuszyk <adam.matuszyk@interia.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"
fastapi-mail = "^1.4.1"
apscheduler = "^3.10.4"
slowapi = "^0.1.9"
httpx = "^0.27.2"
aiofiles = "^24.1.0"
pillow = "^11.0.0"
python-magic = "^0.4.27"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.10"
sentry-sdk = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.7.4"
httpx = "^0.27.2"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
